force-app/main/default/objects/ExpoContact__c/ExpoContact__c.object-meta.xml
<CustomObject>
    <label>ExpoContact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoContacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>