force-app/main/default/objects/ExpoContact__c/fields/AreaCN__c.field-meta.xml
<CustomField>
    <fullName>AreaCN__c</fullName>
    <label>Area CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>