force-app/main/default/objects/ExpoContact__c/fields/AreaEN__c.field-meta.xml
<CustomField>
    <fullName>AreaEN__c</fullName>
    <label>Area EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>