force-app/main/default/objects/ExpoContact__c/fields/Full_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_CN__c</fullName>
    <formula>LastNameCN__c &amp; &quot; &quot; &amp; FirstNameCN__c</formula>
    <label>Full Name CN</label>
    <type>Text</type>
</CustomField>