force-app/main/default/objects/ExpoContact__c/fields/LastNameCN__c.field-meta.xml
<CustomField>
    <fullName>LastNameCN__c</fullName>
    <label>Last Name CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>