force-app/main/default/objects/ExpoContact__c/fields/LastNameEN__c.field-meta.xml
<CustomField>
    <fullName>LastNameEN__c</fullName>
    <label>Last Name EN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>