force-app/main/default/objects/ExpoContact__c/fields/TitilCN__c.field-meta.xml
<CustomField>
    <fullName>TitilCN__c</fullName>
    <label>Titil CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>