force-app/main/default/objects/ExpoContact__c/fields/TitilEN__c.field-meta.xml
<CustomField>
    <fullName>TitilEN__c</fullName>
    <label>Titil EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>