force-app/main/default/objects/ExpoContact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>展会联系人</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>大区联系人</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>